Page: Attempt to fix Safari issue
It looks like Safari needs the stretched element to be a block.

--- a/components/page/assets/Page.scss
+++ b/components/page/assets/Page.scss
@@ -33,13 +33,11 @@ html {
   }
 
   &__body {
-    display: flex;
     flex: 1 1 auto;
     width: 100%;
   }
 
   &__container {
-    flex: 1 1 auto;
   }
 
   &__main {
